--- a/plugin/reservation/Resources/views/Admin/index.html.twig
+++ b/plugin/reservation/Resources/views/Admin/index.html.twig
@@ -23,6 +23,11 @@
     </div>
 {% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" type="text/css" href="{{ themeAsset('claroline-distribution-plugin-reservation-admin-tool.css') }}" />
+{% endblock %}
+
 {% block javascripts %}
     {{ parent() }}
     <script src="{{ hotAsset('dist/claroline-distribution-plugin-reservation-admin-tool.js') }}"></script>
