--- a/plugin/reservation/Resources/styles/administration/tool.less
+++ b/plugin/reservation/Resources/styles/administration/tool.less
@@ -26,3 +26,9 @@
   display: flex;
   justify-content: space-between;
 }
+
+.resource-rights-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
